[gd_scene load_steps=46 format=2]

[ext_resource path="res://sprites/act 2 setting/scene 5/ladder1.png" type="Texture" id=1]
[ext_resource path="res://sprites/act 2 setting/scene 5/ladder2.png" type="Texture" id=2]
[ext_resource path="res://sprites/Act1settings/sceneone/dark filter.png" type="Texture" id=3]
[ext_resource path="res://sprites/act 2 setting/scene 5/crumbled.png" type="Texture" id=4]
[ext_resource path="res://sprites/Act1settings/sceneone/vignette.png" type="Texture" id=5]
[ext_resource path="res://sprites/act 2 setting/scene 5/underground.png" type="Texture" id=6]
[ext_resource path="res://sprites/act 2 setting/scene 5/crumbled2.png" type="Texture" id=7]
[ext_resource path="res://sprites/characters/fall.png" type="Texture" id=8]
[ext_resource path="res://sprites/characters/idle right 2.png" type="Texture" id=9]
[ext_resource path="res://sprites/characters/right walk 7.png" type="Texture" id=10]
[ext_resource path="res://sprites/characters/right walk 5.png" type="Texture" id=11]
[ext_resource path="res://sprites/characters/right walk 3.png" type="Texture" id=12]
[ext_resource path="res://sprites/characters/idle right 1.png" type="Texture" id=13]
[ext_resource path="res://sprites/characters/right walk 6.png" type="Texture" id=14]
[ext_resource path="res://sprites/characters/right walk 2.png" type="Texture" id=15]
[ext_resource path="res://sprites/characters/jump 1.png" type="Texture" id=16]
[ext_resource path="res://sprites/characters/right walk 8.png" type="Texture" id=17]
[ext_resource path="res://sprites/characters/right walk 4.png" type="Texture" id=18]
[ext_resource path="res://act2/scene5/ladder.gd" type="Script" id=19]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://act2/scene5/gap.gd" type="Script" id=21]
[ext_resource path="res://player.gd" type="Script" id=22]
[ext_resource path="res://sprites/act 2 setting/scene 5/prop2.PNG" type="Texture" id=23]
[ext_resource path="res://sprites/act 2 setting/scene 5/prop1.PNG" type="Texture" id=24]
[ext_resource path="res://act2/scene5/Poster1.gd" type="Script" id=25]
[ext_resource path="res://sprites/act3settings/scene4/sewerWater1.PNG" type="Texture" id=26]
[ext_resource path="res://sprites/act3settings/scene4/sewerWater3.PNG" type="Texture" id=27]
[ext_resource path="res://sprites/act3settings/scene4/sewerWater2.PNG" type="Texture" id=28]
[ext_resource path="res://sprites/act3settings/scene4/sewerOverlay.PNG" type="Texture" id=29]
[ext_resource path="res://act2/scene5/scene52.gd" type="Script" id=30]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 235.209, 1316.77 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 20 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 17 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 155.02
height = 319.534

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 215.371, 1186.73 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4307.97, 1102.01 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 577.367, 1028.32 )

[sub_resource type="DynamicFont" id=10]
size = 100
font_data = ExtResource( 20 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 208.568, 337.605 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 28 ), ExtResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=14]
resource_name = "New Anim"
length = 20.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 7155.02, -0.25, 0, 0.25, 0, 1024.54, -0.25, 0, 0.25, 0, 7155.02, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 10, 20 )
}

[sub_resource type="Animation" id=15]
resource_name = "New Anim"
length = 14.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 9255.82, -0.25, 0, 0.25, 0, -797.564, -0.25, 0, 0.25, 0, 9255.82, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 7, 14 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 30 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 3763.76, 1113.45 )
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D"]
position = Vector2( 1310.8, 1475.08 )
frames = SubResource( 1 )

[node name="ladder" type="Area2D" parent="."]
script = ExtResource( 19 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ladder"]
position = Vector2( 6748.49, 459.928 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ladder"]
position = Vector2( 6751.76, 498.186 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="ladder"]
margin_left = 6624.93
margin_top = 437.387
margin_right = 6839.93
margin_bottom = 537.387
custom_fonts/font = SubResource( 4 )
text = "Climb"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 4208.16, 255.561 )
scale = Vector2( 2.20353, 1 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3806.27, 1122.46 )
scale = Vector2( 1.01193, 1.03889 )
texture = ExtResource( 5 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 1069.44, 13.082 )
script = ExtResource( 22 )
__meta__ = {
"_edit_group_": true
}

[node name="playerSprite" type="AnimatedSprite" parent="player"]
position = Vector2( 530.71, 1278.35 )
frames = SubResource( 5 )
animation = "fall"
speed_scale = 1.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( 537.762, 1310.51 )
shape = SubResource( 6 )

[node name="Walk" type="AudioStreamPlayer2D" parent="player"]

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2( 494.537, 1259.73 )
current = true
limit_left = 0
limit_top = 0
limit_right = 7680
limit_bottom = 2140

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -2.27057, -2.2706 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 81.0492, 1144.68 )
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 7554.34, 1186.49 )
shape = SubResource( 7 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3967.45, 2705.97 )
shape = SubResource( 8 )

[node name="gap" type="Area2D" parent="."]
position = Vector2( 0, 6.8118 )
script = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="gap"]
position = Vector2( 3818.36, 476.105 )
shape = SubResource( 9 )

[node name="Label" type="Label" parent="gap"]
margin_left = 3709.05
margin_top = 187.132
margin_right = 3899.05
margin_bottom = 287.132
custom_fonts/font = SubResource( 10 )
text = "Peek"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Poster1" type="Area2D" parent="."]
z_index = -5
script = ExtResource( 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Poster1"]
position = Vector2( 1618.88, 879.757 )
shape = SubResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Poster1"]
position = Vector2( 1626.55, 818.474 )
scale = Vector2( 0.605054, 0.602456 )
frames = SubResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2833.98, 1494.83 )
scale = Vector2( 3.60795, 1.32075 )
frames = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 14 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -797.564, 1282.99 )
scale = Vector2( 4.55703, 2.24831 )
texture = ExtResource( 29 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 15 )
[connection signal="body_entered" from="ladder" to="ladder" method="_on_ladder_body_entered"]
[connection signal="body_exited" from="ladder" to="ladder" method="_on_ladder_body_exited"]
[connection signal="body_entered" from="gap" to="gap" method="_on_gap_body_entered"]
[connection signal="body_exited" from="gap" to="gap" method="_on_gap_body_exited"]
[connection signal="body_entered" from="Poster1" to="Poster1" method="_on_Poster1_body_entered"]
[connection signal="body_exited" from="Poster1" to="Poster1" method="_on_Poster1_body_exited"]
